--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,19 @@
 header {
     font-family: 'Bebas neue';
     box-shadow: .2rem .2rem 1rem rgba(0, 0, 0, 0.885);
-    
+
 }
 
 header ul li {
     transition: ease-in-out 1s;
 }
 
-.cardProduct{
-    box-shadow: .2rem .2rem 1rem rgba(0, 0, 0, 0.403);
+.cardProduct {
+    /*    box-shadow: .2rem .2rem 1rem rgba(0, 0, 0, 0.403); */
     transition: ease-in-out 0.2s;
 }
 
-.cardProduct:hover{
+.cardProduct:hover {
     transform: scale(1.07);
     cursor: pointer;
 }
@@ -25,10 +25,12 @@ header ul li {
 /* ACCORDION STYLES */
 
 .css-1elwnq4-MuiPaper-root-MuiAccordion-root {
-    background: black!important;
+    background: black !important;
     padding: 0px 1rem;
 }
-.css-1elwnq4-MuiPaper-root-MuiAccordion-root > div , .css-1elwnq4-MuiPaper-root-MuiAccordion-root>div > div {
+
+.css-1elwnq4-MuiPaper-root-MuiAccordion-root>div,
+.css-1elwnq4-MuiPaper-root-MuiAccordion-root>div>div {
     color: white;
 }
 
@@ -36,35 +38,35 @@ header ul li {
 
 /*Product page styles*/
 
-.model-title{
-  font-family: 'Bebas neue'; 
-  border-bottom: 1px solid rgba(128, 128, 128, 0.526);
+.model-title {
+    font-family: 'Bebas neue';
+    border-bottom: 1px solid rgba(128, 128, 128, 0.526);
 }
 
-.product-price{
-    font-family: 'Bebas neue';  
-    border-top: 1px solid rgba(128, 128, 128, 0.526); 
+.product-price {
+    font-family: 'Bebas neue';
+    border-top: 1px solid rgba(128, 128, 128, 0.526);
 }
 
-.add-to-cart{
-    font-family: 'Bebas neue'; 
+.add-to-cart {
+    font-family: 'Bebas neue';
     transition: ease-in-out 0.2s;
 }
 
 .add-to-cart:hover {
-   background-color: rgb(174, 146, 84);
+    background-color: rgb(174, 146, 84);
 }
 
 /*category component styles*/
 
-.category-title{
-    font-family: 'Bebas neue'; 
+.category-title {
+    font-family: 'Bebas neue';
     font-size: 24px;
 }
 
 /* warranty component styles*/
 
-.warranty h3{
+.warranty h3 {
     font-family: 'Bebas neue';
     font-size: 30px;
 }
@@ -73,6 +75,6 @@ header ul li {
     color: rgb(174, 146, 84) !important;
 }
 
-.css-1aquho2-MuiTabs-indicator{
-    background-color:rgb(174, 146, 84) !important;
+.css-1aquho2-MuiTabs-indicator {
+    background-color: rgb(174, 146, 84) !important;
 }
