--- a/src/App.css
+++ b/src/App.css
@@ -111,34 +111,43 @@ header ul li {
 
 /* css inputs */
 
-input:focus-visible {
-  border: 0;
-  outline-color: #f2e39f;
-}
 /* Change the white to any color */
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active,
-select {
-  -webkit-box-shadow: 0 0 0 30px #f5f0d9 inset !important;
-}
-
-input:fill input,
-select {
-  background: #f2e39f;
-}
-select {
+select,
+input[type="text"],
+input[type="email"],
+input[type="number"],
+input:active,
+input:focus,
+input::selection {
+  -webkit-box-shadow: 0 0 0 30px #f5f5f55a inset !important;
+  border: 1px solid rgb(167, 167, 167);
+  border-radius: 3px;
   color: black;
 }
 
-input {
-  background-color: #fff8d6;
+input:focus,
+select:focus {
+  outline: rgb(120, 120, 120) solid 1px;
 }
 
+select {
+  color: black;
+}
+/* 
+input,
+input:active,
+input:focus,
+input::selection input:focus-visible {
+  border: 1px solid black;
+  border-radius: 3px;
+} */
+
 label {
-  padding-top: 3px;
-  padding-bottom: 3px;
+  margin-top: 16px;
 }
 
 /*  */
