carousel distinto arreglado slick

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
 @tailwind utilities;
 
 @import "~react-image-gallery/styles/css/image-gallery.css";
+@import "~slick-carousel/slick/slick.css"; 
+@import "~slick-carousel/slick/slick-theme.css";
 
 @layer base {
 
